# basecommerce

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  README.md  REPO_CLEANUP_COMPLETE.md  SETUP.md  TEST_USER.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 002_add_indexes_constraints_engines.py  003_add_event_outbox_table.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/core_engines/: __init__.py
backend/app/domain/: __init__.py
backend/app/domain/pedido/: validators.py
backend/app/models/: __init__.py  base.py  cliente.py  cotacao.py  estoque.py  fornecedor.py  historico_preco.py  obra.py  pedido.py  produto.py  tenant.py  user.py
backend/app/platform/: __init__.py
backend/app/schemas/: __init__.py  auth.py  obra.py
backend/docs/: CLEANUP_SUMMARY.md  RUFF_FIXES_SUMMARY.md  domain-model.md
backend/scripts/: create_test_user.py
backend/tests/: __init__.py  conftest.py  test_multitenant.py
backend/tests/integration/: test_engines_endpoints.py  test_event_handlers.py
backend/tests/unit/: test_event_outbox.py  test_stock_intelligence_engine.py
infra/cli/: README.md  basec.sh  pyproject.toml
infra/cli/basec/: __init__.py  compose.py  deploy.py  docker.py  envs.py  firewall.py  inventory.py  logs.py  main.py  migrate.py  output.py  redeploy.py  rollback.py  smoke.py  ssh.py  ssh_cmd.py  status.py  tenants.py  users.py
infra/cli/tests/: __init__.py  test_docker.py
(+233 files in other folders)
