[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "construcao-backend"
version = "1.0.0"
description = "Backend API para gestão de cotações e pedidos"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports
"tests/**" = ["F401"]  # Unused imports in tests

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

